[project]
name = "test-setup-python"
version = "0.1.0"
description = "testing purpose"
authors = [
    {name = "chiranjib-swain",email = "chiranjib-swain@github.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
